Implemented other definitions of priv/dis groups

--- a/compute-intersectional-result-table.ipynb
+++ b/compute-intersectional-result-table.ipynb
@@ -78,46 +78,56 @@
    "outputs": [],
    "source": [
     "def prefix(cleaning_method, criteria, intersectional_group):\n",
-    "    if intersectional_group == \"priv_priv\":\n",
-    "        return f'{cleaning_method}__{criteria[0]}_priv__{criteria[1]}_priv'\n",
-    "    elif intersectional_group == \"priv_dis\":\n",
-    "        return f'{cleaning_method}__{criteria[0]}_priv__{criteria[1]}_dis'\n",
-    "    elif intersectional_group == \"dis_priv\":\n",
-    "        return f'{cleaning_method}__{criteria[0]}_dis__{criteria[1]}_priv'\n",
-    "    elif intersectional_group == \"dis_dis\":\n",
-    "        return f'{cleaning_method}__{criteria[0]}_dis__{criteria[1]}_dis'\n",
-    "    else:\n",
-    "        raise ValueError(f\"Unsupported: {intersectional_group}\")\n",
+    "    first, second = intersectional_group.split(\"_\")\n",
+    "    return f'{cleaning_method}__{criteria[0]}_{first}__{criteria[1]}_{second}'\n",
+    "\n",
+    "def stat_value(stat_name, stats, cleaning_method, criteria, *groups):\n",
+    "    count = 0\n",
+    "    for g in groups:\n",
+    "        count += stats[f\"{prefix(cleaning_method, criteria, g)}__{stat_name}\"]\n",
+    "    return count\n",
+    "\n",
+    "# TODO: Define priv and dis intersectional groups\n",
+    "# e.g. priv = intersectionally priv, i.e. priv_priv\n",
+    "#      dis = intersectionally dis, i.e. dis_dis\n",
+    "priv = [\"priv_priv\", \"priv_dis\", \"dis_priv\"]\n",
+    "dis = [\"dis_dis\"]\n",
     "\n",
     "def compute_eo(stats, cleaning_method, criteria, flipped):\n",
-    "    # TODO: Define priv and dis intersectional groups\n",
-    "    # e.g. priv = intersectionally priv, i.e. priv_priv\n",
-    "    #      dis = intersectionally dis, i.e. dis_dis\n",
-    "    # TODO: Implement one vs. everyone, aggregating across multiple intersectional groups\n",
-    "    priv_prefix = prefix(cleaning_method, criteria, \"priv_priv\")\n",
-    "    dis_prefix = prefix(cleaning_method, criteria, \"dis_dis\")\n",
-    "\n",
     "    if not flipped:\n",
-    "        return (stats[f'{priv_prefix}__tp'] / (stats[f'{priv_prefix}__tp'] + stats[f'{priv_prefix}__fn'])) - \\\n",
-    "             (stats[f'{dis_prefix}__tp'] / (stats[f'{dis_prefix}__tp'] + stats[f'{dis_prefix}__fn']))\n",
+    "        priv_tp = stat_value(\"tp\", stats, cleaning_method, criteria, *priv)\n",
+    "        priv_fn = stat_value(\"fn\", stats, cleaning_method, criteria, *priv)\n",
+    "        dis_tp = stat_value(\"tp\", stats, cleaning_method, criteria, *dis)\n",
+    "        dis_fn = stat_value(\"fn\", stats, cleaning_method, criteria, *dis)\n",
+    "\n",
+    "        return (priv_tp / (priv_tp + priv_fn)) - \\\n",
+    "             (dis_tp / (dis_tp + dis_fn))\n",
     "    else:\n",
-    "        return (stats[f'{priv_prefix}__tn'] / (stats[f'{priv_prefix}__tn'] + stats[f'{priv_prefix}__fp'])) - \\\n",
-    "             (stats[f'{dis_prefix}__tn'] / (stats[f'{dis_prefix}__tn'] + stats[f'{dis_prefix}__fp']))\n",
+    "        priv_tn = stat_value(\"tn\", stats, cleaning_method, criteria, *priv)\n",
+    "        priv_fp = stat_value(\"fp\", stats, cleaning_method, criteria, *priv)\n",
+    "        dis_tn = stat_value(\"tn\", stats, cleaning_method, criteria, *dis)\n",
+    "        dis_fp = stat_value(\"fp\", stats, cleaning_method, criteria, *dis)\n",
+    "\n",
+    "        return (priv_tn / (priv_tn + priv_fp)) - \\\n",
+    "             (dis_tn / (dis_tn + dis_fp))\n",
     "\n",
     "def compute_pp(stats, cleaning_method, criteria, flipped):\n",
-    "    # TODO: Define priv and dis intersectional groups\n",
-    "    # e.g. priv = intersectionally priv, i.e. priv_priv\n",
-    "    #      dis = intersectionally dis, i.e. dis_dis\n",
-    "    # TODO: Implement one vs. everyone, aggregating across multiple intersectional groups\n",
-    "    priv_prefix = prefix(cleaning_method, criteria, \"priv_priv\")\n",
-    "    dis_prefix = prefix(cleaning_method, criteria, \"dis_dis\")\n",
-    "\n",
     "    if not flipped:\n",
-    "        return (stats[f'{priv_prefix}__tp'] / (stats[f'{priv_prefix}__tp'] + stats[f'{priv_prefix}__fp'])) - \\\n",
-    "             (stats[f'{dis_prefix}__tp'] / (stats[f'{dis_prefix}__tp'] + stats[f'{dis_prefix}__fp']))\n",
+    "        priv_tp = stat_value(\"tp\", stats, cleaning_method, criteria, *priv)\n",
+    "        priv_fp = stat_value(\"fp\", stats, cleaning_method, criteria, *priv)\n",
+    "        dis_tp = stat_value(\"tp\", stats, cleaning_method, criteria, *dis)\n",
+    "        dis_fp = stat_value(\"fp\", stats, cleaning_method, criteria, *dis)\n",
+    "\n",
+    "        return (priv_tp / (priv_tp + priv_fp)) - \\\n",
+    "             (dis_tp / (dis_tp + dis_fp))\n",
     "    else:\n",
-    "        return (stats[f'{priv_prefix}__tn'] / (stats[f'{priv_prefix}__tn'] + stats[f'{priv_prefix}__fn'])) - \\\n",
-    "             (stats[f'{dis_prefix}__tn'] / (stats[f'{dis_prefix}__tn'] + stats[f'{dis_prefix}__fn']))\n",
+    "        priv_tn = stat_value(\"tn\", stats, cleaning_method, criteria, *priv)\n",
+    "        priv_fn = stat_value(\"fn\", stats, cleaning_method, criteria, *priv)\n",
+    "        dis_tn = stat_value(\"tn\", stats, cleaning_method, criteria, *dis)\n",
+    "        dis_fn = stat_value(\"fn\", stats, cleaning_method, criteria, *dis)\n",
+    "\n",
+    "        return (priv_tn / (priv_tn + priv_fn)) - \\\n",
+    "             (dis_tn / (dis_tn + dis_fn))\n",
     "\n",
     "def count(data, dataset_name, target_criteria, error_type, model, metric_name, scoring, log_file, flipped=False):\n",
     "    dirty_scores = []\n",
@@ -241,16 +251,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "adult,sex/race,equal_opportunity,logistic_regression,outliers,SD,impute__mean_dummy,True,positive,negative\n",
       "adult,sex/race,equal_opportunity,logistic_regression,missing_values,,impute_mean_mode,True,negative,negative\n",
       "adult,sex/race,equal_opportunity,logistic_regression,missing_values,,impute_mean_dummy,True,negative,negative\n",
+      "adult,sex/race,equal_opportunity,logistic_regression,missing_values,,impute_median_mode,True,insignificant,insignificant\n",
+      "adult,sex/race,equal_opportunity,logistic_regression,missing_values,,impute_median_dummy,True,negative,negative\n",
+      "adult,sex/race,equal_opportunity,logistic_regression,missing_values,,impute_mode_mode,True,insignificant,insignificant\n",
+      "adult,sex/race,equal_opportunity,logistic_regression,missing_values,,impute_mode_dummy,True,insignificant,positive\n",
       "adult,sex/race,equal_opportunity,knn_classification,missing_values,,impute_mean_mode,True,insignificant,negative\n",
       "adult,sex/race,equal_opportunity,knn_classification,missing_values,,impute_mean_dummy,True,insignificant,insignificant\n",
+      "adult,sex/race,equal_opportunity,knn_classification,missing_values,,impute_median_mode,True,insignificant,insignificant\n",
+      "adult,sex/race,equal_opportunity,knn_classification,missing_values,,impute_median_dummy,True,insignificant,insignificant\n",
+      "adult,sex/race,equal_opportunity,knn_classification,missing_values,,impute_mode_mode,True,insignificant,insignificant\n",
+      "adult,sex/race,equal_opportunity,knn_classification,missing_values,,impute_mode_dummy,True,insignificant,insignificant\n",
       "adult,sex/race,equal_opportunity,XGBoost,missing_values,,impute_mean_mode,True,positive,negative\n",
+      "adult,sex/race,equal_opportunity,XGBoost,missing_values,,impute_mean_dummy,True,positive,negative\n",
+      "adult,sex/race,equal_opportunity,XGBoost,missing_values,,impute_median_mode,True,positive,negative\n",
+      "adult,sex/race,equal_opportunity,XGBoost,missing_values,,impute_median_dummy,True,positive,negative\n",
+      "adult,sex/race,equal_opportunity,XGBoost,missing_values,,impute_mode_mode,True,positive,negative\n",
+      "adult,sex/race,equal_opportunity,XGBoost,missing_values,,impute_mode_dummy,True,positive,negative\n",
+      "adult,sex/race,predictive_parity,logistic_regression,outliers,SD,impute__mean_dummy,True,positive,negative\n",
       "adult,sex/race,predictive_parity,logistic_regression,missing_values,,impute_mean_mode,True,positive,negative\n",
       "adult,sex/race,predictive_parity,logistic_regression,missing_values,,impute_mean_dummy,True,positive,negative\n",
+      "adult,sex/race,predictive_parity,logistic_regression,missing_values,,impute_median_mode,True,positive,insignificant\n",
+      "adult,sex/race,predictive_parity,logistic_regression,missing_values,,impute_median_dummy,True,positive,negative\n",
+      "adult,sex/race,predictive_parity,logistic_regression,missing_values,,impute_mode_mode,True,positive,insignificant\n",
+      "adult,sex/race,predictive_parity,logistic_regression,missing_values,,impute_mode_dummy,True,positive,positive\n",
       "adult,sex/race,predictive_parity,knn_classification,missing_values,,impute_mean_mode,True,insignificant,negative\n",
       "adult,sex/race,predictive_parity,knn_classification,missing_values,,impute_mean_dummy,True,insignificant,insignificant\n",
-      "adult,sex/race,predictive_parity,XGBoost,missing_values,,impute_mean_mode,True,negative,negative\n"
+      "adult,sex/race,predictive_parity,knn_classification,missing_values,,impute_median_mode,True,insignificant,insignificant\n",
+      "adult,sex/race,predictive_parity,knn_classification,missing_values,,impute_median_dummy,True,insignificant,insignificant\n",
+      "adult,sex/race,predictive_parity,knn_classification,missing_values,,impute_mode_mode,True,insignificant,insignificant\n",
+      "adult,sex/race,predictive_parity,knn_classification,missing_values,,impute_mode_dummy,True,insignificant,insignificant\n",
+      "adult,sex/race,predictive_parity,XGBoost,missing_values,,impute_mean_mode,True,negative,negative\n",
+      "adult,sex/race,predictive_parity,XGBoost,missing_values,,impute_mean_dummy,True,positive,negative\n",
+      "adult,sex/race,predictive_parity,XGBoost,missing_values,,impute_median_mode,True,negative,negative\n",
+      "adult,sex/race,predictive_parity,XGBoost,missing_values,,impute_median_dummy,True,positive,negative\n",
+      "adult,sex/race,predictive_parity,XGBoost,missing_values,,impute_mode_mode,True,negative,negative\n",
+      "adult,sex/race,predictive_parity,XGBoost,missing_values,,impute_mode_dummy,True,positive,negative\n"
      ]
     }
    ],
@@ -259,7 +297,7 @@
     "models = ['logistic_regression', 'knn_classification', 'XGBoost']\n",
     "metrics = [('equal_opportunity', compute_eo), ('predictive_parity', compute_pp)]\n",
     "\n",
-    "with open('cleanml.csv', 'w') as log_file:\n",
+    "with open('cleanml-intersectional-v4_allvdd.csv', 'w') as log_file:\n",
     "    log_file.write('dataset,criteria,metric,model,error,detection,repair,test_repaired,fairness_impact,accuracy_impact\\n')\n",
     "\n",
     "    for metric, scoring in metrics:\n",
