--- a/detect_errors-intersectional-combined.ipynb
+++ b/detect_errors-intersectional-combined.ipynb
@@ -40,8 +40,8 @@
     "import pandas as pd\n",
     "\n",
     "cases = [('adult', 'sex', 'race'), ('folktables', 'sex', 'race'), \n",
-    "         ('heart', 'sex', 'age@45'), ('heart', 'sex', 'age@55'),\n",
-    "         ('german', 'age', 'sex'), ('german', 'age', 'foreign_worker')]"
+    "         ('heart', 'sex', 'age@35'), ('heart', 'sex', 'age@45'), ('heart', 'sex', 'age@55'),\n",
+    "         ('german', 'age', 'sex'), ('german', 'age', 'foreign_worker'), ('german', 'sex', 'foreign_worker')]"
    ]
   },
   {
@@ -69,10 +69,12 @@
       "+------------+-------+----------------+-----------------+-------------------+-------------------+----------------------+\n",
       "|   adult    |  sex  |      race      |  6.0\\% (28735)  |   10.4\\% (3915)   |   8.8\\% (13027)   |    11.2\\% (3165)     |\n",
       "| folktables |  sex  |      race      | 43.5\\% (115136) |   45.9\\% (71541)  |  51.9\\% (117473)  |    51.4\\% (74667)    |\n",
+      "|   heart    |  sex  |     age@35     |  0.0\\% (45530)  |     nan\\% (0)     |   0.0\\% (24470)   |      nan\\% (0)       |\n",
       "|   heart    |  sex  |     age@45     |  0.0\\% (45530)  |     nan\\% (0)     |   0.0\\% (24470)   |      nan\\% (0)       |\n",
       "|   heart    |  sex  |     age@55     |  0.0\\% (45530)  |   0.0\\% (24470)   |     nan\\% (0)     |      nan\\% (0)       |\n",
       "|   german   |  age  |      sex       |   34.4\\% (605)  |    28.3\\% (205)   |    21.2\\% (85)    |     20.0\\% (105)     |\n",
       "|   german   |  age  | foreign_worker |   23.5\\% (34)   |    33.2\\% (776)   |     33.3\\% (3)    |     20.3\\% (187)     |\n",
+      "|   german   |  sex  | foreign_worker |   23.3\\% (30)   |    33.2\\% (660)   |     28.6\\% (7)    |     25.4\\% (303)     |\n",
       "+------------+-------+----------------+-----------------+-------------------+-------------------+----------------------+\n"
      ]
     }
@@ -133,6 +135,8 @@
       "|   adult    |  sex  |      race      | iqr  | 37.2\\% (28735) |   32.4\\% (3915)   |   40.5\\% (13027)  |    31.0\\% (3165)     |\n",
       "| folktables |  sex  |      race      |  sd  | 0.7\\% (115136) |   0.6\\% (71541)   |   0.3\\% (117473)  |    0.4\\% (74667)     |\n",
       "| folktables |  sex  |      race      | iqr  | 0.0\\% (115136) |   0.0\\% (71541)   |   0.0\\% (117473)  |    0.0\\% (74667)     |\n",
+      "|   heart    |  sex  |     age@35     |  sd  | 10.2\\% (45530) |     nan\\% (0)     |   10.0\\% (24470)  |      nan\\% (0)       |\n",
+      "|   heart    |  sex  |     age@35     | iqr  | 24.1\\% (45530) |     nan\\% (0)     |   22.9\\% (24470)  |      nan\\% (0)       |\n",
       "|   heart    |  sex  |     age@45     |  sd  | 10.2\\% (45530) |     nan\\% (0)     |   10.0\\% (24470)  |      nan\\% (0)       |\n",
       "|   heart    |  sex  |     age@45     | iqr  | 24.1\\% (45530) |     nan\\% (0)     |   22.9\\% (24470)  |      nan\\% (0)       |\n",
       "|   heart    |  sex  |     age@55     |  sd  | 10.2\\% (45530) |   10.0\\% (24470)  |     nan\\% (0)     |      nan\\% (0)       |\n",
@@ -141,6 +145,8 @@
       "|   german   |  age  |      sex       | iqr  |  34.5\\% (605)  |    17.6\\% (205)   |    18.8\\% (85)    |     10.5\\% (105)     |\n",
       "|   german   |  age  | foreign_worker |  sd  |   5.9\\% (34)   |    5.0\\% (776)    |     0.0\\% (3)     |     3.7\\% (187)      |\n",
       "|   german   |  age  | foreign_worker | iqr  |  38.2\\% (34)   |    29.9\\% (776)   |     0.0\\% (3)     |     14.4\\% (187)     |\n",
+      "|   german   |  sex  | foreign_worker |  sd  |   3.3\\% (30)   |    5.6\\% (660)    |     14.3\\% (7)    |     3.0\\% (303)      |\n",
+      "|   german   |  sex  | foreign_worker | iqr  |  40.0\\% (30)   |    32.3\\% (660)   |     14.3\\% (7)    |     15.2\\% (303)     |\n",
       "+------------+-------+----------------+------+----------------+-------------------+-------------------+----------------------+\n"
      ]
     }
