--- a/detect_errors-intersectional-combined.ipynb
+++ b/detect_errors-intersectional-combined.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "0acc9be4",
    "metadata": {},
    "outputs": [
@@ -64,25 +64,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------+-------+----------------+-----------------+-------------------+-------------------+----------------------+\n",
-      "|  dataset   | attr1 |     attr2      |  frac_priv_priv | frac_priv_nonpriv | frac_nonpriv_priv | frac_nonpriv_nonpriv |\n",
-      "+------------+-------+----------------+-----------------+-------------------+-------------------+----------------------+\n",
-      "|   adult    |  sex  |      race      |  6.0\\% (28735)  |   10.4\\% (3915)   |   8.8\\% (13027)   |    11.2\\% (3165)     |\n",
-      "| folktables |  sex  |      race      | 43.5\\% (115136) |   45.9\\% (71541)  |  51.9\\% (117473)  |    51.4\\% (74667)    |\n",
-      "|   heart    |  sex  |     age@35     |  0.0\\% (45530)  |     nan\\% (0)     |   0.0\\% (24470)   |      nan\\% (0)       |\n",
-      "|   heart    |  sex  |     age@45     |  0.0\\% (45530)  |     nan\\% (0)     |   0.0\\% (24470)   |      nan\\% (0)       |\n",
-      "|   heart    |  sex  |     age@55     |  0.0\\% (45530)  |   0.0\\% (24470)   |     nan\\% (0)     |      nan\\% (0)       |\n",
-      "|   german   |  age  |      sex       |   34.4\\% (605)  |    28.3\\% (205)   |    21.2\\% (85)    |     20.0\\% (105)     |\n",
-      "|   german   |  age  | foreign_worker |   23.5\\% (34)   |    33.2\\% (776)   |     33.3\\% (3)    |     20.3\\% (187)     |\n",
-      "|   german   |  sex  | foreign_worker |   23.3\\% (30)   |    33.2\\% (660)   |     28.6\\% (7)    |     25.4\\% (303)     |\n",
-      "+------------+-------+----------------+-----------------+-------------------+-------------------+----------------------+\n"
+      "+------------+-------+---------+-----------------+----------------+-----------------+----------------+\n",
+      "|  dataset   | attr1 |  attr2  |  frac_priv_priv | frac_priv_dis  |  frac_dis_priv  |  frac_dis_dis  |\n",
+      "+------------+-------+---------+-----------------+----------------+-----------------+----------------+\n",
+      "|   adult    |  sex  |   race  |  6.0\\% (28735)  | 10.4\\% (3915)  |  8.8\\% (13027)  | 11.2\\% (3165)  |\n",
+      "| folktables |  sex  |   race  | 43.5\\% (115136) | 45.9\\% (71541) | 51.9\\% (117473) | 51.4\\% (74667) |\n",
+      "|   heart    |  sex  |  age@35 |  0.0\\% (45530)  |   nan\\% (0)    |  0.0\\% (24470)  |   nan\\% (0)    |\n",
+      "|   heart    |  sex  |  age@45 |  0.0\\% (45530)  |   nan\\% (0)    |  0.0\\% (24470)  |   nan\\% (0)    |\n",
+      "|   heart    |  sex  |  age@55 |  0.0\\% (45530)  | 0.0\\% (24470)  |    nan\\% (0)    |   nan\\% (0)    |\n",
+      "|   german   |  age  |   sex   |   34.4\\% (605)  |  28.3\\% (205)  |   21.2\\% (85)   |  20.0\\% (105)  |\n",
+      "|   german   |  age  | foreign |   23.5\\% (34)   |  33.2\\% (776)  |    33.3\\% (3)   |  20.3\\% (187)  |\n",
+      "|   german   |  sex  | foreign |   23.3\\% (30)   |  33.2\\% (660)  |    28.6\\% (7)   |  25.4\\% (303)  |\n",
+      "+------------+-------+---------+-----------------+----------------+-----------------+----------------+\n"
      ]
     }
    ],
    "source": [
     "frac_missing = PrettyTable()\n",
-    "frac_missing.field_names = [\"dataset\", \"attr1\", \"attr2\", \"frac_priv_priv\", \"frac_priv_nonpriv\",\n",
-    "                          \"frac_nonpriv_priv\", \"frac_nonpriv_nonpriv\"]\n",
+    "frac_missing.field_names = [\"dataset\", \"attr1\", \"attr2\", \"frac_priv_priv\", \"frac_priv_dis\",\n",
+    "                            \"frac_dis_priv\", \"frac_dis_dis\"]\n",
     "\n",
     "for dataset_name, attr1, attr2 in cases:\n",
     "    dataset = Datasets.load(dataset_name)\n",
@@ -109,7 +109,7 @@
     "    frac_nonpriv_priv = len(dirty_nonpriv_priv) / len(data_nonpriv_priv) if len(data_nonpriv_priv) else np.NAN\n",
     "    frac_nonpriv_nonpriv = len(dirty_nonpriv_nonpriv) / len(data_nonpriv_nonpriv) if len(data_nonpriv_nonpriv) else np.NAN\n",
     "\n",
-    "    frac_missing.add_row([dataset_name, attr1, attr2,\n",
+    "    frac_missing.add_row([dataset_name, attr1[:7], attr2[:7],\n",
     "                          f\"{perc(frac_priv_priv)} ({len(data_priv_priv)})\",\n",
     "                          f\"{perc(frac_priv_nonpriv)} ({len(data_priv_nonpriv)})\",\n",
     "                          f\"{perc(frac_nonpriv_priv)} ({len(data_nonpriv_priv)})\",\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "9145d00f",
    "metadata": {},
    "outputs": [
@@ -128,34 +128,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------+-------+----------------+------+----------------+-------------------+-------------------+----------------------+\n",
-      "|  dataset   | attr1 |     attr2      | name | frac_priv_priv | frac_priv_nonpriv | frac_nonpriv_priv | frac_nonpriv_nonpriv |\n",
-      "+------------+-------+----------------+------+----------------+-------------------+-------------------+----------------------+\n",
-      "|   adult    |  sex  |      race      |  sd  | 8.1\\% (28735)  |    6.5\\% (3915)   |   5.0\\% (13027)   |     3.8\\% (3165)     |\n",
-      "|   adult    |  sex  |      race      | iqr  | 37.2\\% (28735) |   32.4\\% (3915)   |   40.5\\% (13027)  |    31.0\\% (3165)     |\n",
-      "| folktables |  sex  |      race      |  sd  | 0.7\\% (115136) |   0.6\\% (71541)   |   0.3\\% (117473)  |    0.4\\% (74667)     |\n",
-      "| folktables |  sex  |      race      | iqr  | 0.0\\% (115136) |   0.0\\% (71541)   |   0.0\\% (117473)  |    0.0\\% (74667)     |\n",
-      "|   heart    |  sex  |     age@35     |  sd  | 10.2\\% (45530) |     nan\\% (0)     |   10.0\\% (24470)  |      nan\\% (0)       |\n",
-      "|   heart    |  sex  |     age@35     | iqr  | 24.1\\% (45530) |     nan\\% (0)     |   22.9\\% (24470)  |      nan\\% (0)       |\n",
-      "|   heart    |  sex  |     age@45     |  sd  | 10.2\\% (45530) |     nan\\% (0)     |   10.0\\% (24470)  |      nan\\% (0)       |\n",
-      "|   heart    |  sex  |     age@45     | iqr  | 24.1\\% (45530) |     nan\\% (0)     |   22.9\\% (24470)  |      nan\\% (0)       |\n",
-      "|   heart    |  sex  |     age@55     |  sd  | 10.2\\% (45530) |   10.0\\% (24470)  |     nan\\% (0)     |      nan\\% (0)       |\n",
-      "|   heart    |  sex  |     age@55     | iqr  | 24.1\\% (45530) |   22.9\\% (24470)  |     nan\\% (0)     |      nan\\% (0)       |\n",
-      "|   german   |  age  |      sex       |  sd  |  5.5\\% (605)   |    3.9\\% (205)    |     5.9\\% (85)    |     1.9\\% (105)      |\n",
-      "|   german   |  age  |      sex       | iqr  |  34.5\\% (605)  |    17.6\\% (205)   |    18.8\\% (85)    |     10.5\\% (105)     |\n",
-      "|   german   |  age  | foreign_worker |  sd  |   5.9\\% (34)   |    5.0\\% (776)    |     0.0\\% (3)     |     3.7\\% (187)      |\n",
-      "|   german   |  age  | foreign_worker | iqr  |  38.2\\% (34)   |    29.9\\% (776)   |     0.0\\% (3)     |     14.4\\% (187)     |\n",
-      "|   german   |  sex  | foreign_worker |  sd  |   3.3\\% (30)   |    5.6\\% (660)    |     14.3\\% (7)    |     3.0\\% (303)      |\n",
-      "|   german   |  sex  | foreign_worker | iqr  |  40.0\\% (30)   |    32.3\\% (660)   |     14.3\\% (7)    |     15.2\\% (303)     |\n",
-      "+------------+-------+----------------+------+----------------+-------------------+-------------------+----------------------+\n"
+      "+------------+-------+---------+------+----------------+----------------+----------------+---------------+\n",
+      "|  dataset   | attr1 |  attr2  | name | frac_priv_priv | frac_priv_dis  | frac_dis_priv  |  frac_dis_dis |\n",
+      "+------------+-------+---------+------+----------------+----------------+----------------+---------------+\n",
+      "|   adult    |  sex  |   race  |  sd  | 8.1\\% (28735)  |  6.5\\% (3915)  | 5.0\\% (13027)  |  3.8\\% (3165) |\n",
+      "|   adult    |  sex  |   race  | iqr  | 37.2\\% (28735) | 32.4\\% (3915)  | 40.5\\% (13027) | 31.0\\% (3165) |\n",
+      "| folktables |  sex  |   race  |  sd  | 0.7\\% (115136) | 0.6\\% (71541)  | 0.3\\% (117473) | 0.4\\% (74667) |\n",
+      "| folktables |  sex  |   race  | iqr  | 0.0\\% (115136) | 0.0\\% (71541)  | 0.0\\% (117473) | 0.0\\% (74667) |\n",
+      "|   heart    |  sex  |  age@35 |  sd  | 10.2\\% (45530) |   nan\\% (0)    | 10.0\\% (24470) |   nan\\% (0)   |\n",
+      "|   heart    |  sex  |  age@35 | iqr  | 24.1\\% (45530) |   nan\\% (0)    | 22.9\\% (24470) |   nan\\% (0)   |\n",
+      "|   heart    |  sex  |  age@45 |  sd  | 10.2\\% (45530) |   nan\\% (0)    | 10.0\\% (24470) |   nan\\% (0)   |\n",
+      "|   heart    |  sex  |  age@45 | iqr  | 24.1\\% (45530) |   nan\\% (0)    | 22.9\\% (24470) |   nan\\% (0)   |\n",
+      "|   heart    |  sex  |  age@55 |  sd  | 10.2\\% (45530) | 10.0\\% (24470) |   nan\\% (0)    |   nan\\% (0)   |\n",
+      "|   heart    |  sex  |  age@55 | iqr  | 24.1\\% (45530) | 22.9\\% (24470) |   nan\\% (0)    |   nan\\% (0)   |\n",
+      "|   german   |  age  |   sex   |  sd  |  5.5\\% (605)   |  3.9\\% (205)   |   5.9\\% (85)   |  1.9\\% (105)  |\n",
+      "|   german   |  age  |   sex   | iqr  |  34.5\\% (605)  |  17.6\\% (205)  |  18.8\\% (85)   |  10.5\\% (105) |\n",
+      "|   german   |  age  | foreign |  sd  |   5.9\\% (34)   |  5.0\\% (776)   |   0.0\\% (3)    |  3.7\\% (187)  |\n",
+      "|   german   |  age  | foreign | iqr  |  38.2\\% (34)   |  29.9\\% (776)  |   0.0\\% (3)    |  14.4\\% (187) |\n",
+      "|   german   |  sex  | foreign |  sd  |   3.3\\% (30)   |  5.6\\% (660)   |   14.3\\% (7)   |  3.0\\% (303)  |\n",
+      "|   german   |  sex  | foreign | iqr  |  40.0\\% (30)   |  32.3\\% (660)  |   14.3\\% (7)   |  15.2\\% (303) |\n",
+      "+------------+-------+---------+------+----------------+----------------+----------------+---------------+\n"
      ]
     }
    ],
    "source": [
     "frac_outliers = PrettyTable()\n",
     "frac_outliers.field_names = [\"dataset\", \"attr1\", \"attr2\", \"name\",\n",
-    "                             \"frac_priv_priv\", \"frac_priv_nonpriv\",\n",
-    "                             \"frac_nonpriv_priv\", \"frac_nonpriv_nonpriv\"]\n",
+    "                             \"frac_priv_priv\", \"frac_priv_dis\",\n",
+    "                             \"frac_dis_priv\", \"frac_dis_dis\"]\n",
     "\n",
     "for dataset_name, attr1, attr2 in cases:\n",
     "    dataset = Datasets.load(dataset_name)\n",
@@ -183,7 +183,7 @@
     "        frac_nonpriv_priv = len(dirty_nonpriv_priv) / len(data_nonpriv_priv) if len(data_nonpriv_priv) else np.NAN\n",
     "        frac_nonpriv_nonpriv = len(dirty_nonpriv_nonpriv) / len(data_nonpriv_nonpriv) if len(data_nonpriv_nonpriv) else np.NAN\n",
     "\n",
-    "        frac_outliers.add_row([dataset_name, attr1, attr2, name,\n",
+    "        frac_outliers.add_row([dataset_name, attr1[:7], attr2[:7], name,\n",
     "                               f\"{perc(frac_priv_priv)} ({len(data_priv_priv)})\",\n",
     "                               f\"{perc(frac_priv_nonpriv)} ({len(data_priv_nonpriv)})\",\n",
     "                               f\"{perc(frac_nonpriv_priv)} ({len(data_nonpriv_priv)})\",\n",
