--- a/detect_errors-intersectional-combined.ipynb
+++ b/detect_errors-intersectional-combined.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "0acc9be4",
    "metadata": {},
    "outputs": [
@@ -69,9 +69,9 @@
       "+------------+-------+---------+-----------------+----------------+-----------------+----------------+\n",
       "|   adult    |  sex  |   race  |  6.0\\% (28735)  | 10.4\\% (3915)  |  8.8\\% (13027)  | 11.2\\% (3165)  |\n",
       "| folktables |  sex  |   race  | 43.5\\% (115136) | 45.9\\% (71541) | 51.9\\% (117473) | 51.4\\% (74667) |\n",
-      "|   heart    |  sex  |  age@35 |  0.0\\% (45530)  |   nan\\% (0)    |  0.0\\% (24470)  |   nan\\% (0)    |\n",
-      "|   heart    |  sex  |  age@45 |  0.0\\% (45530)  |   nan\\% (0)    |  0.0\\% (24470)  |   nan\\% (0)    |\n",
-      "|   heart    |  sex  |  age@55 |  0.0\\% (45530)  | 0.0\\% (24470)  |    nan\\% (0)    |   nan\\% (0)    |\n",
+      "|   heart    |  sex  |  age@35 |  0.0\\% (45527)  |   0.0\\% (3)    |  0.0\\% (24469)  |   0.0\\% (1)    |\n",
+      "|   heart    |  sex  |  age@45 |  0.0\\% (39163)  |  0.0\\% (6367)  |  0.0\\% (20565)  |  0.0\\% (3905)  |\n",
+      "|   heart    |  sex  |  age@55 |  0.0\\% (20579)  | 0.0\\% (10674)  |  0.0\\% (24951)  | 0.0\\% (13796)  |\n",
       "|   german   |  age  |   sex   |   34.4\\% (605)  |  28.3\\% (205)  |   21.2\\% (85)   |  20.0\\% (105)  |\n",
       "|   german   |  age  | foreign |   23.5\\% (34)   |  33.2\\% (776)  |    33.3\\% (3)   |  20.3\\% (187)  |\n",
       "|   german   |  sex  | foreign |   23.3\\% (30)   |  33.2\\% (660)  |    28.6\\% (7)   |  25.4\\% (303)  |\n",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "9145d00f",
    "metadata": {},
    "outputs": [
@@ -128,26 +128,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------+-------+---------+------+----------------+----------------+----------------+---------------+\n",
-      "|  dataset   | attr1 |  attr2  | name | frac_priv_priv | frac_priv_dis  | frac_dis_priv  |  frac_dis_dis |\n",
-      "+------------+-------+---------+------+----------------+----------------+----------------+---------------+\n",
-      "|   adult    |  sex  |   race  |  sd  | 8.1\\% (28735)  |  6.5\\% (3915)  | 5.0\\% (13027)  |  3.8\\% (3165) |\n",
-      "|   adult    |  sex  |   race  | iqr  | 37.2\\% (28735) | 32.4\\% (3915)  | 40.5\\% (13027) | 31.0\\% (3165) |\n",
-      "| folktables |  sex  |   race  |  sd  | 0.7\\% (115136) | 0.6\\% (71541)  | 0.3\\% (117473) | 0.4\\% (74667) |\n",
-      "| folktables |  sex  |   race  | iqr  | 0.0\\% (115136) | 0.0\\% (71541)  | 0.0\\% (117473) | 0.0\\% (74667) |\n",
-      "|   heart    |  sex  |  age@35 |  sd  | 10.2\\% (45530) |   nan\\% (0)    | 10.0\\% (24470) |   nan\\% (0)   |\n",
-      "|   heart    |  sex  |  age@35 | iqr  | 24.1\\% (45530) |   nan\\% (0)    | 22.9\\% (24470) |   nan\\% (0)   |\n",
-      "|   heart    |  sex  |  age@45 |  sd  | 10.2\\% (45530) |   nan\\% (0)    | 10.0\\% (24470) |   nan\\% (0)   |\n",
-      "|   heart    |  sex  |  age@45 | iqr  | 24.1\\% (45530) |   nan\\% (0)    | 22.9\\% (24470) |   nan\\% (0)   |\n",
-      "|   heart    |  sex  |  age@55 |  sd  | 10.2\\% (45530) | 10.0\\% (24470) |   nan\\% (0)    |   nan\\% (0)   |\n",
-      "|   heart    |  sex  |  age@55 | iqr  | 24.1\\% (45530) | 22.9\\% (24470) |   nan\\% (0)    |   nan\\% (0)   |\n",
-      "|   german   |  age  |   sex   |  sd  |  5.5\\% (605)   |  3.9\\% (205)   |   5.9\\% (85)   |  1.9\\% (105)  |\n",
-      "|   german   |  age  |   sex   | iqr  |  34.5\\% (605)  |  17.6\\% (205)  |  18.8\\% (85)   |  10.5\\% (105) |\n",
-      "|   german   |  age  | foreign |  sd  |   5.9\\% (34)   |  5.0\\% (776)   |   0.0\\% (3)    |  3.7\\% (187)  |\n",
-      "|   german   |  age  | foreign | iqr  |  38.2\\% (34)   |  29.9\\% (776)  |   0.0\\% (3)    |  14.4\\% (187) |\n",
-      "|   german   |  sex  | foreign |  sd  |   3.3\\% (30)   |  5.6\\% (660)   |   14.3\\% (7)   |  3.0\\% (303)  |\n",
-      "|   german   |  sex  | foreign | iqr  |  40.0\\% (30)   |  32.3\\% (660)  |   14.3\\% (7)   |  15.2\\% (303) |\n",
-      "+------------+-------+---------+------+----------------+----------------+----------------+---------------+\n"
+      "+------------+-------+---------+------+----------------+----------------+----------------+----------------+\n",
+      "|  dataset   | attr1 |  attr2  | name | frac_priv_priv | frac_priv_dis  | frac_dis_priv  |  frac_dis_dis  |\n",
+      "+------------+-------+---------+------+----------------+----------------+----------------+----------------+\n",
+      "|   adult    |  sex  |   race  |  sd  | 8.1\\% (28735)  |  6.5\\% (3915)  | 5.0\\% (13027)  |  3.8\\% (3165)  |\n",
+      "|   adult    |  sex  |   race  | iqr  | 37.2\\% (28735) | 32.4\\% (3915)  | 40.5\\% (13027) | 31.0\\% (3165)  |\n",
+      "| folktables |  sex  |   race  |  sd  | 0.7\\% (115136) | 0.6\\% (71541)  | 0.3\\% (117473) | 0.4\\% (74667)  |\n",
+      "| folktables |  sex  |   race  | iqr  | 0.0\\% (115136) | 0.0\\% (71541)  | 0.0\\% (117473) | 0.0\\% (74667)  |\n",
+      "|   heart    |  sex  |  age@35 |  sd  | 10.1\\% (45527) |  100.0\\% (3)   | 10.0\\% (24469) |  100.0\\% (1)   |\n",
+      "|   heart    |  sex  |  age@35 | iqr  | 24.1\\% (45527) |  100.0\\% (3)   | 22.9\\% (24469) |  100.0\\% (1)   |\n",
+      "|   heart    |  sex  |  age@45 |  sd  | 10.8\\% (39163) |  5.9\\% (6367)  | 10.6\\% (20565) |  6.8\\% (3905)  |\n",
+      "|   heart    |  sex  |  age@45 | iqr  | 24.3\\% (39163) | 22.9\\% (6367)  | 23.9\\% (20565) | 18.1\\% (3905)  |\n",
+      "|   heart    |  sex  |  age@55 |  sd  | 12.9\\% (20579) | 12.0\\% (10674) | 7.9\\% (24951)  | 8.4\\% (13796)  |\n",
+      "|   heart    |  sex  |  age@55 | iqr  | 26.0\\% (20579) | 25.3\\% (10674) | 22.6\\% (24951) | 21.1\\% (13796) |\n",
+      "|   german   |  age  |   sex   |  sd  |  5.5\\% (605)   |  3.9\\% (205)   |   5.9\\% (85)   |  1.9\\% (105)   |\n",
+      "|   german   |  age  |   sex   | iqr  |  34.5\\% (605)  |  17.6\\% (205)  |  18.8\\% (85)   |  10.5\\% (105)  |\n",
+      "|   german   |  age  | foreign |  sd  |   5.9\\% (34)   |  5.0\\% (776)   |   0.0\\% (3)    |  3.7\\% (187)   |\n",
+      "|   german   |  age  | foreign | iqr  |  38.2\\% (34)   |  29.9\\% (776)  |   0.0\\% (3)    |  14.4\\% (187)  |\n",
+      "|   german   |  sex  | foreign |  sd  |   3.3\\% (30)   |  5.6\\% (660)   |   14.3\\% (7)   |  3.0\\% (303)   |\n",
+      "|   german   |  sex  | foreign | iqr  |  40.0\\% (30)   |  32.3\\% (660)  |   14.3\\% (7)   |  15.2\\% (303)  |\n",
+      "+------------+-------+---------+------+----------------+----------------+----------------+----------------+\n"
      ]
     }
    ],
