Added mislabel detection via cleanlab and shapley

--- a/detect_errors-intersectional-combined.ipynb
+++ b/detect_errors-intersectional-combined.ipynb
@@ -216,6 +216,78 @@
     "\n",
     "print(frac_outliers)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e639a942",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "OMP: Info #276: omp_set_nested routine deprecated, please use omp_set_max_active_levels instead.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+------------+-------+---------+------+----------------+---------------+----------------+----------------+\n",
+      "|  dataset   | attr1 |  attr2  | name | frac_priv_priv | frac_priv_dis | frac_dis_priv  |  frac_dis_dis  |\n",
+      "+------------+-------+---------+------+----------------+---------------+----------------+----------------+\n",
+      "|   adult    |  sex  |   race  |  cl  | 9503.3\\% (30)  |  44.7\\% (660) |  9157.1\\% (7)  |  40.6\\% (303)  |\n",
+      "|   adult    |  sex  |   race  | shap | 21760.0\\% (30) |  79.2\\% (660) | 15828.6\\% (7)  |  51.8\\% (303)  |\n",
+      "| folktables |  sex  |   race  |  cl  | 30140.0\\% (30) | 697.4\\% (660) | 112842.9\\% (7) | 1255.8\\% (303) |\n",
+      "| folktables |  sex  |   race  | shap | 46243.3\\% (30) | 743.2\\% (660) | 157057.1\\% (7) | 1521.5\\% (303) |\n",
+      "|   heart    |  sex  |  age@35 |  cl  | 33713.3\\% (30) |  0.0\\% (660)  | 79000.0\\% (7)  |  0.0\\% (303)   |\n",
+      "|   heart    |  sex  |  age@35 | shap | 39610.0\\% (30) |  0.0\\% (660)  | 107885.7\\% (7) |  0.0\\% (303)   |\n",
+      "|   heart    |  sex  |  age@45 |  cl  | 29733.3\\% (30) | 175.6\\% (660) | 65985.7\\% (7)  | 255.1\\% (303)  |\n",
+      "|   heart    |  sex  |  age@45 | shap | 35730.0\\% (30) | 176.4\\% (660) | 91485.7\\% (7)  | 378.9\\% (303)  |\n",
+      "|   heart    |  sex  |  age@55 |  cl  | 16063.3\\% (30) | 370.8\\% (660) | 74800.0\\% (7)  | 995.7\\% (303)  |\n",
+      "|   heart    |  sex  |  age@55 | shap | 17516.7\\% (30) | 501.2\\% (660) | 94685.7\\% (7)  | 1400.7\\% (303) |\n",
+      "|   german   |  age  |   sex   |  cl  |  510.0\\% (30)  |  7.3\\% (660)  |  485.7\\% (7)   |  8.9\\% (303)   |\n",
+      "|   german   |  age  |   sex   | shap |  323.3\\% (30)  |  5.8\\% (660)  |  371.4\\% (7)   |  7.9\\% (303)   |\n",
+      "|   german   |  age  | foreign |  cl  |  13.3\\% (30)   |  33.9\\% (660) |   0.0\\% (7)    |  21.5\\% (303)  |\n",
+      "|   german   |  age  | foreign | shap |   6.7\\% (30)   |  20.2\\% (660) |   0.0\\% (7)    |  16.5\\% (303)  |\n",
+      "|   german   |  sex  | foreign |  cl  |  10.0\\% (30)   |  27.6\\% (660) |   28.6\\% (7)   |  23.4\\% (303)  |\n",
+      "|   german   |  sex  | foreign | shap |   3.3\\% (30)   |  18.5\\% (660) |   14.3\\% (7)   |  20.1\\% (303)  |\n",
+      "+------------+-------+---------+------+----------------+---------------+----------------+----------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "frac_outliers = PrettyTable()\n",
+    "frac_outliers.field_names = [\"dataset\", \"attr1\", \"attr2\", \"name\",\n",
+    "                             \"frac_priv_priv\", \"frac_priv_dis\",\n",
+    "                             \"frac_dis_priv\", \"frac_dis_dis\"]\n",
+    "\n",
+    "for dataset_name, attr1, attr2 in cases:\n",
+    "    dataset = Datasets.load(dataset_name)\n",
+    "\n",
+    "    data = dataset.as_df().copy(deep=True)\n",
+    "    data['id'] = range(len(data))\n",
+    "\n",
+    "    for detector, name in [(detect_mislabeled_via_cleanlab, 'cl'), (detect_mislabeled_via_shapley, 'shap')]:\n",
+    "        dirty = detector(data, dataset, 1234)  # TODO: Try different seeds\n",
+    "\n",
+    "        dirty_priv_priv, dirty_priv_nonpriv, dirty_nonpriv_priv, dirty_nonpriv_nonpriv = \\\n",
+    "            dataset.partition_data_by(dirty, attr1, attr2)\n",
+    "\n",
+    "        frac_priv_priv = len(dirty_priv_priv) / len(data_priv_priv) if len(data_priv_priv) else np.NAN\n",
+    "        frac_priv_nonpriv = len(dirty_priv_nonpriv) / len(data_priv_nonpriv) if len(data_priv_nonpriv) else np.NAN\n",
+    "        frac_nonpriv_priv = len(dirty_nonpriv_priv) / len(data_nonpriv_priv) if len(data_nonpriv_priv) else np.NAN\n",
+    "        frac_nonpriv_nonpriv = len(dirty_nonpriv_nonpriv) / len(data_nonpriv_nonpriv) if len(data_nonpriv_nonpriv) else np.NAN\n",
+    "\n",
+    "        frac_outliers.add_row([dataset_name, attr1[:7], attr2[:7], name,\n",
+    "                               f\"{perc(frac_priv_priv)} ({len(data_priv_priv)})\",\n",
+    "                               f\"{perc(frac_priv_nonpriv)} ({len(data_priv_nonpriv)})\",\n",
+    "                               f\"{perc(frac_nonpriv_priv)} ({len(data_nonpriv_priv)})\",\n",
+    "                               f\"{perc(frac_nonpriv_nonpriv)} ({len(data_nonpriv_nonpriv)})\"])\n",
+    "\n",
+    "print(frac_outliers)"
+   ]
   }
  ],
  "metadata": {
