Fixed bug calculating mislabel rates

--- a/detect_errors-intersectional-combined.ipynb
+++ b/detect_errors-intersectional-combined.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "9145d00f",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "e639a942",
    "metadata": {},
    "outputs": [
@@ -234,26 +234,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------+-------+---------+------+----------------+---------------+----------------+----------------+\n",
-      "|  dataset   | attr1 |  attr2  | name | frac_priv_priv | frac_priv_dis | frac_dis_priv  |  frac_dis_dis  |\n",
-      "+------------+-------+---------+------+----------------+---------------+----------------+----------------+\n",
-      "|   adult    |  sex  |   race  |  cl  | 9503.3\\% (30)  |  44.7\\% (660) |  9157.1\\% (7)  |  40.6\\% (303)  |\n",
-      "|   adult    |  sex  |   race  | shap | 21760.0\\% (30) |  79.2\\% (660) | 15828.6\\% (7)  |  51.8\\% (303)  |\n",
-      "| folktables |  sex  |   race  |  cl  | 30140.0\\% (30) | 697.4\\% (660) | 112842.9\\% (7) | 1255.8\\% (303) |\n",
-      "| folktables |  sex  |   race  | shap | 46243.3\\% (30) | 743.2\\% (660) | 157057.1\\% (7) | 1521.5\\% (303) |\n",
-      "|   heart    |  sex  |  age@35 |  cl  | 33713.3\\% (30) |  0.0\\% (660)  | 79000.0\\% (7)  |  0.0\\% (303)   |\n",
-      "|   heart    |  sex  |  age@35 | shap | 39610.0\\% (30) |  0.0\\% (660)  | 107885.7\\% (7) |  0.0\\% (303)   |\n",
-      "|   heart    |  sex  |  age@45 |  cl  | 29733.3\\% (30) | 175.6\\% (660) | 65985.7\\% (7)  | 255.1\\% (303)  |\n",
-      "|   heart    |  sex  |  age@45 | shap | 35730.0\\% (30) | 176.4\\% (660) | 91485.7\\% (7)  | 378.9\\% (303)  |\n",
-      "|   heart    |  sex  |  age@55 |  cl  | 16063.3\\% (30) | 370.8\\% (660) | 74800.0\\% (7)  | 995.7\\% (303)  |\n",
-      "|   heart    |  sex  |  age@55 | shap | 17516.7\\% (30) | 501.2\\% (660) | 94685.7\\% (7)  | 1400.7\\% (303) |\n",
-      "|   german   |  age  |   sex   |  cl  |  510.0\\% (30)  |  7.3\\% (660)  |  485.7\\% (7)   |  8.9\\% (303)   |\n",
-      "|   german   |  age  |   sex   | shap |  323.3\\% (30)  |  5.8\\% (660)  |  371.4\\% (7)   |  7.9\\% (303)   |\n",
-      "|   german   |  age  | foreign |  cl  |  13.3\\% (30)   |  33.9\\% (660) |   0.0\\% (7)    |  21.5\\% (303)  |\n",
-      "|   german   |  age  | foreign | shap |   6.7\\% (30)   |  20.2\\% (660) |   0.0\\% (7)    |  16.5\\% (303)  |\n",
-      "|   german   |  sex  | foreign |  cl  |  10.0\\% (30)   |  27.6\\% (660) |   28.6\\% (7)   |  23.4\\% (303)  |\n",
-      "|   german   |  sex  | foreign | shap |   3.3\\% (30)   |  18.5\\% (660) |   14.3\\% (7)   |  20.1\\% (303)  |\n",
-      "+------------+-------+---------+------+----------------+---------------+----------------+----------------+\n"
+      "+------------+-------+---------+------+-----------------+----------------+----------------+----------------+\n",
+      "|  dataset   | attr1 |  attr2  | name |  frac_priv_priv | frac_priv_dis  | frac_dis_priv  |  frac_dis_dis  |\n",
+      "+------------+-------+---------+------+-----------------+----------------+----------------+----------------+\n",
+      "|   adult    |  sex  |   race  |  cl  |  10.0\\% (28735) |  7.7\\% (3915)  | 5.0\\% (13027)  |  3.6\\% (3165)  |\n",
+      "|   adult    |  sex  |   race  | shap |  22.7\\% (28735) | 13.4\\% (3915)  | 8.5\\% (13027)  |  5.0\\% (3165)  |\n",
+      "| folktables |  sex  |   race  |  cl  |  7.9\\% (115136) | 6.4\\% (71541)  | 6.6\\% (117473) | 5.0\\% (74667)  |\n",
+      "| folktables |  sex  |   race  | shap | 12.0\\% (115136) | 6.9\\% (71541)  | 9.4\\% (117473) | 6.2\\% (74667)  |\n",
+      "|   heart    |  sex  |  age@35 |  cl  |  22.7\\% (45527) |   0.0\\% (3)    | 23.3\\% (24469) |   0.0\\% (1)    |\n",
+      "|   heart    |  sex  |  age@35 | shap |  26.1\\% (45527) |   0.0\\% (3)    | 30.9\\% (24469) |   0.0\\% (1)    |\n",
+      "|   heart    |  sex  |  age@45 |  cl  |  22.4\\% (39163) | 17.9\\% (6367)  | 22.3\\% (20565) | 19.5\\% (3905)  |\n",
+      "|   heart    |  sex  |  age@45 | shap |  27.4\\% (39163) | 18.3\\% (6367)  | 31.1\\% (20565) | 29.4\\% (3905)  |\n",
+      "|   heart    |  sex  |  age@55 |  cl  |  23.5\\% (20579) | 22.8\\% (10674) | 21.0\\% (24951) | 22.1\\% (13796) |\n",
+      "|   heart    |  sex  |  age@55 | shap |  25.5\\% (20579) | 31.0\\% (10674) | 26.6\\% (24951) | 30.8\\% (13796) |\n",
+      "|   german   |  age  |   sex   |  cl  |   27.1\\% (605)  |  23.9\\% (205)  |  45.9\\% (85)   |  36.2\\% (105)  |\n",
+      "|   german   |  age  |   sex   | shap |   16.0\\% (605)  |  18.5\\% (205)  |  30.6\\% (85)   |  22.9\\% (105)  |\n",
+      "|   german   |  age  | foreign |  cl  |   14.7\\% (34)   |  27.3\\% (776)  |   33.3\\% (3)   |  33.7\\% (187)  |\n",
+      "|   german   |  age  | foreign | shap |    5.9\\% (34)   |  17.1\\% (776)  |   0.0\\% (3)    |  26.7\\% (187)  |\n",
+      "|   german   |  sex  | foreign |  cl  |    6.7\\% (30)   |  22.1\\% (660)  |   14.3\\% (7)   |  21.8\\% (303)  |\n",
+      "|   german   |  sex  | foreign | shap |    3.3\\% (30)   |  18.5\\% (660)  |   14.3\\% (7)   |  20.1\\% (303)  |\n",
+      "+------------+-------+---------+------+-----------------+----------------+----------------+----------------+\n"
      ]
     }
    ],
@@ -272,6 +272,8 @@
     "    for detector, name in [(detect_mislabeled_via_cleanlab, 'cl'), (detect_mislabeled_via_shapley, 'shap')]:\n",
     "        dirty = detector(data, dataset, 1234)  # TODO: Try different seeds\n",
     "\n",
+    "        data_priv_priv, data_priv_nonpriv, data_nonpriv_priv, data_nonpriv_nonpriv = \\\n",
+    "            dataset.partition_data_by(data, attr1, attr2)\n",
     "        dirty_priv_priv, dirty_priv_nonpriv, dirty_nonpriv_priv, dirty_nonpriv_nonpriv = \\\n",
     "            dataset.partition_data_by(dirty, attr1, attr2)\n",
     "\n",
