Renamed accidentally overwritten method `partition_data_by`

--- a/deep-dive-data-errors-mislabels.ipynb
+++ b/deep-dive-data-errors-mislabels.ipynb
@@ -119,7 +119,7 @@
     "            \n",
     "        dirty['label'] = dataset.extract_label_for_prediction_task(dirty)\n",
     "\n",
-    "        dirty_priv, dirty_dis = dataset.partition_data_by(dirty, criteria)\n",
+    "        dirty_priv, dirty_dis = dataset.partition_data_by_single_axis(dirty, criteria)\n",
     "\n",
     "        counts_priv = dict(dirty_priv.label.value_counts())\n",
     "        counts_dis = dict(dirty_dis.label.value_counts())\n",
