--- a/detect_errors-combined.ipynb
+++ b/detect_errors-combined.ipynb
@@ -64,22 +64,22 @@
     "for dataset_name, criteria in cases:\n",
     "\n",
     "    dataset = Datasets.load(dataset_name)\n",
-    "    \n",
+    "\n",
     "    data = dataset.as_df().copy(deep=True)\n",
     "    data['id'] = range(len(data))\n",
     "\n",
     "    dirty_slices = []\n",
     "\n",
-    "    for column in dataset.categorical_columns + dataset.numerical_columns:    \n",
+    "    for column in dataset.categorical_columns + dataset.numerical_columns:\n",
     "        dirty_slices.append(detect_missing_values(data, column))\n",
     "\n",
-    "    dirty = pd.concat(dirty_slices).drop_duplicates(subset='id')    \n",
+    "    dirty = pd.concat(dirty_slices).drop_duplicates(subset='id')\n",
     "\n",
-    "    data_priv, data_nonpriv = dataset.partition_data_by(data, criteria)\n",
-    "    dirty_priv, dirty_nonpriv = dataset.partition_data_by(dirty, criteria)\n",
+    "    data_priv, data_nonpriv = dataset.partition_data_by_single_axis(data, criteria)\n",
+    "    dirty_priv, dirty_nonpriv = dataset.partition_data_by_single_axis(dirty, criteria)\n",
     "\n",
     "    disparate = is_disparate(len(data_priv), len(dirty_priv), len(data_nonpriv), len(dirty_nonpriv))\n",
-    "    \n",
+    "\n",
     "    frac_priv = len(dirty_priv) / len(data_priv)\n",
     "    frac_nonpriv = len(dirty_nonpriv) / len(data_nonpriv)\n",
     "\n",
@@ -117,22 +117,21 @@
     "for dataset_name, criteria in cases:\n",
     "\n",
     "    dataset = Datasets.load(dataset_name)\n",
-    "    \n",
+    "\n",
     "    data = dataset.as_df().copy(deep=True)\n",
     "    data['id'] = range(len(data))\n",
     "\n",
-    "    \n",
     "    for detector, name in [(detect_outliers_sd, 'sd'), (detect_outliers_iqr, 'iqr')]:\n",
-    "        \n",
+    "\n",
     "        dirty_slices = []\n",
     "\n",
-    "        for column in dataset.numerical_columns:    \n",
+    "        for column in dataset.numerical_columns:\n",
     "            dirty_slices.append(detector(data, column))\n",
     "\n",
-    "        dirty = pd.concat(dirty_slices).drop_duplicates(subset='id')    \n",
+    "        dirty = pd.concat(dirty_slices).drop_duplicates(subset='id')\n",
     "\n",
-    "        data_priv, data_nonpriv = dataset.partition_data_by(data, criteria)\n",
-    "        dirty_priv, dirty_nonpriv = dataset.partition_data_by(dirty, criteria)\n",
+    "        data_priv, data_nonpriv = dataset.partition_data_by_single_axis(data, criteria)\n",
+    "        dirty_priv, dirty_nonpriv = dataset.partition_data_by_single_axis(dirty, criteria)\n",
     "\n",
     "        disparate = is_disparate(len(data_priv), len(dirty_priv), len(data_nonpriv), len(dirty_nonpriv))\n",
     "\n",
