--- a/detect_errors-intersectional-combined.ipynb
+++ b/detect_errors-intersectional-combined.ipynb
@@ -161,9 +161,9 @@
     "    dirty = pd.concat(dirty_slices).drop_duplicates(subset='id')\n",
     "\n",
     "    data_priv_priv, data_priv_nonpriv, data_nonpriv_priv, data_nonpriv_nonpriv = \\\n",
-    "        dataset.partition_data_by(data, attr1, attr2)\n",
+    "        dataset.partition_data_by_intersection(data, attr1, attr2)\n",
     "    dirty_priv_priv, dirty_priv_nonpriv, dirty_nonpriv_priv, dirty_nonpriv_nonpriv = \\\n",
-    "        dataset.partition_data_by(dirty, attr1, attr2)\n",
+    "        dataset.partition_data_by_intersection(dirty, attr1, attr2)\n",
     "\n",
     "    query = f\"INSERT INTO groups VALUES ('{dataset_name}', '{attr1}', '{attr2}', \"\\\n",
     "            f\"{len(data_priv_priv)}, {len(data_priv_nonpriv)}, \"\\\n",
@@ -1259,9 +1259,9 @@
     "        dirty = pd.concat(dirty_slices).drop_duplicates(subset='id')\n",
     "\n",
     "        data_priv_priv, data_priv_nonpriv, data_nonpriv_priv, data_nonpriv_nonpriv = \\\n",
-    "            dataset.partition_data_by(data, attr1, attr2)\n",
+    "            dataset.partition_data_by_intersection(data, attr1, attr2)\n",
     "        dirty_priv_priv, dirty_priv_nonpriv, dirty_nonpriv_priv, dirty_nonpriv_nonpriv = \\\n",
-    "            dataset.partition_data_by(dirty, attr1, attr2)\n",
+    "            dataset.partition_data_by_intersection(dirty, attr1, attr2)\n",
     "\n",
     "        # disparate = is_disparate(len(data_priv), len(dirty_priv), len(data_nonpriv), len(dirty_nonpriv))\n",
     "\n",
@@ -1279,7 +1279,7 @@
     "    dirty = detect_outliers_via_if(data, dataset, 1234)  # TODO: Try different seeds\n",
     "\n",
     "    dirty_priv_priv, dirty_priv_nonpriv, dirty_nonpriv_priv, dirty_nonpriv_nonpriv = \\\n",
-    "        dataset.partition_data_by(dirty, attr1, attr2)\n",
+    "        dataset.partition_data_by_intersection(dirty, attr1, attr2)\n",
     "\n",
     "    # frac_priv_priv = len(dirty_priv_priv) / len(data_priv_priv) if len(data_priv_priv) else np.NAN\n",
     "    # frac_priv_nonpriv = len(dirty_priv_nonpriv) / len(data_priv_nonpriv) if len(data_priv_nonpriv) else np.NAN\n",
@@ -2718,9 +2718,9 @@
     "        dirty = detector(data, dataset, 1234)  # TODO: Try different seeds\n",
     "\n",
     "        data_priv_priv, data_priv_nonpriv, data_nonpriv_priv, data_nonpriv_nonpriv = \\\n",
-    "            dataset.partition_data_by(data, attr1, attr2)\n",
+    "            dataset.partition_data_by_intersection(data, attr1, attr2)\n",
     "        dirty_priv_priv, dirty_priv_nonpriv, dirty_nonpriv_priv, dirty_nonpriv_nonpriv = \\\n",
-    "            dataset.partition_data_by(dirty, attr1, attr2)\n",
+    "            dataset.partition_data_by_intersection(dirty, attr1, attr2)\n",
     "\n",
     "        # frac_priv_priv = len(dirty_priv_priv) / len(data_priv_priv) if len(data_priv_priv) else np.NAN\n",
     "        # frac_priv_nonpriv = len(dirty_priv_nonpriv) / len(data_priv_nonpriv) if len(data_priv_nonpriv) else np.NAN\n",
